--- a/todo.html
+++ b/todo.html
@@ -15,6 +15,6 @@
         </div>
         <div id="tasks"></div>
     </div>
-    <script src="javascript.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
